Use `position: absolute` instead of `float` for tree (fixes #98)
Using float has the huge disadvantage that different floating elements can block
each other if they're just slightly too big (e.g. because of fractional pixels
when zooming), leading to the same-level channels being displayed with
increasing indention, even though they shouldn't.

--- a/themes/MetroMumbleLight/main.scss
+++ b/themes/MetroMumbleLight/main.scss
@@ -110,7 +110,7 @@ html, body {
   height: 19px;
 }
 .branch {
-  float: left;
+  position: absolute;
   padding-top: 3px;
   padding-bottom: 3px;
   background-color: $channels-bg-color;
@@ -129,7 +129,7 @@ html, body {
 }
 .channel-tree,
 .user-tree {
-  float: left;
+  position: absolute;
 }
 .channel-tree::before,
 .user-tree::before {
